[ADD] java公共库